# jacobi

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: doc.yml  publish.yml  sphinx.yml  test.yml
bench/: test.py  test_diagonal.py
doc/: build.py  conf.py  index.rst.in  jacobi.rst  reference.rst
doc/plot/: example.py  precision.py  speed.py
docs/: README.rst  conf.py  index.rst.in  reference.rst
docs/plot/: example.py  precision.py  speed.py
notebook/: demo.ipynb  diagonal.ipynb  explore.ipynb  robustness.ipynb
src/: main.cpp
src/jacobi/: __init__.py  _jacobi.py  _propagate.py  _typing.py  _version.py  complex_step.py  core.py  main.cpp  real_step.py
test/: Untitled-1.ipynb  test_core.py  test_jacobi.py  test_nan.py  test_propagate.py
tests/: bench.py  test_jacobi.py
