[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "jacobi"
requires-python = ">=3.8"
description = "Compute numerical derivatives"
authors = [{ name = "Hans Dembinski" }, { email = "hans.dembinski@gmail.com" }]
dynamic = ["version"]
dependencies = ["numpy"]
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
]
license = { file = "LICENSE" }

[project.urls]
repository = "https://github.com/hdembinski/jacobi"
documentation = "https://hdembinski.github.io/jacobi/"

[project.optional-dependencies]
test = ["pytest", "pytest-benchmark"]
doc = ["sphinx", "sphinx-rtd-theme", "ipykernel"]
plot = ["numdifftools", "matplotlib"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/jacobi/_version.py"

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
no_implicit_optional = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules --strict-config --strict-markers -q -ra --ff"
testpaths = ["src/jacobi", "tests"]
filterwarnings = [
    "error::numpy.VisibleDeprecationWarning",
    "error::DeprecationWarning",
]

[tool.ruff]
select = ["E", "F", "D"]
extend-ignore = ["D203", "D212"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.per-file-ignores]
"test_*.py" = ["B", "D"]
"tests/bench.py" = ["D"]
".ci/*.py" = ["D"]
"bench/*.py" = ["D"]
"doc/*.py" = ["D"]
