[metadata]
name = jacobi
version = attr: jacobi._version.version
author = Hans Dembinski
author_email = hans.dembinski@gmail.com
description = Compute numerical derivatives.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hdembinski/jacobi
project_urls =
    Bug Tracker = https://github.com/hdembinski/jacobi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: MacOS X
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Topic :: Scientific/Engineering
    Topic :: Text Processing :: Markup :: LaTeX

[options]
package_dir =
    = src
packages = jacobi
python_requires = >=3.6
install_requires = numpy >= 1.10

[options.extras_require]
test =
    pytest
    pytest-benchmark
    pre-commit
    types-setuptools
doc =
    sphinx
plot =
    numdifftools
    matplotlib

[flake8]
max-line-length = 90
ignore = E203

[pydocstyle]
convention = numpy

[tool:pytest]
testpaths = test
