[metadata]
name = jacobi
version = attr: jacobi._version.version
author = Hans Dembinski
author_email = hans.dembinski@gmail.com
description = Compute numerical derivatives.
license = MIT
license_files =
    LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/hdembinski/jacobi
project_urls =
    Bug Tracker = https://github.com/hdembinski/jacobi/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Topic :: Scientific/Engineering
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = jacobi
python_requires = >=3.6
install_requires = numpy >= 1.10

[options.extras_require]
test =
    pytest
    pytest-benchmark
    pre-commit
    types-setuptools
doc =
    sphinx
    sphinx-rtd-theme
    ipykernel
plot =
    numdifftools
    matplotlib

[flake8]
max-line-length = 90
ignore = E203

[pydocstyle]
convention = numpy

[tool:pytest]
testpaths = test
